@@ -49,13 +49,7 @@
           }
           if (IsChecked('term_medical_preretirees_benefit')) {
             ShowSection(MedicalPreretirees);
-            // We want to hide the NCQA for Preretirees.
-            $('.group-criteria', context).hide();
-          }
-          if (IsChecked('term_medical_retirees_benefit')) {
-            ShowSection(MedicalRetirees);
-
-            // We want to show the NCQA for Retirees.
+            // We want to show the NCQA for Preretirees.
             // If it's not reported by NCQA hide the ratings for that one.
             $('.group-criteria', context).each(function() {
               var status = $(this).text();
@@ -63,9 +57,12 @@
                 $(this).addClass('hide');
               }
             });
-
-            // Show the NCQA for Retirees.
             $('.group-criteria', context).show();
+          }
+          if (IsChecked('term_medical_retirees_benefit')) {
+            ShowSection(MedicalRetirees);
+            // We want to hide the NCQA for Retirees.
+            $('.group-criteria', context).hide();
           }
           if (IsChecked('term_dental_active_benefit')) {
             ShowSection(DentalActive);
