@@ -2,7 +2,7 @@ name = stanford_benefits
 description = All the content type and view settings for the Benefit Comparison Tool.
 core = 7.x
 package = Stanford
-version = 7.x-1.0-alpha3
+version = 7.x-1.0-alpha4
 dependencies[] = better_exposed_filters
 dependencies[] = ctools
 dependencies[] = ds
